--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-beautiful-dnd": "^12.1.2",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "@types/redux": "^3.6.0",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
@@ -44,6 +46,7 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.27.0",
-    "@typescript-eslint/parser": "^2.27.0"
+    "@typescript-eslint/parser": "^2.27.0",
+    "eslint-config-airbnb": "^18.1.0"
   }
 }
